tests/miniJava/neg/004354_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public if int [] java ( ) { return 0 ; } }
